--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-image: url("./bg.jpg");
-  background-size: cover;
+  background-size: 100% 120%;
+  background-repeat: no-repeat;
 }
 
 code {
